--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "awesome-typescript-loader": "^3.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "connect-session-sequelize": "^4.1.0",
@@ -31,7 +32,8 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "sequelize": "^4.3.2"
+    "sequelize": "^4.3.2",
+    "styled-components": "^2.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
