--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "passport-local": "^1.0.0",
     "pg": "^6.4.1",
     "react": "^15.6.1",
+    "react-anime": "^0.3.4",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-transition-group": "^2.2.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
