--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-session-sequelize": "^4.1.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "gsap": "^1.20.2",
     "history": "^4.6.3",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
