--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-register --watch-extensions js,jsx tests/**/*.test.js",
+    "start": "node server",
     "start-dev": "webpack -w & NODE_ENV=development nodemon ./server --watch server"
   },
   "keywords": [],
