--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "enzyme": "^2.9.1",
     "mocha": "^3.4.2",
     "supertest": "^3.0.0",
-    "webpack": "^3.2.0"
+    "webpack": "^3.2.0",
+    "webpack-livereload-plugin": "^0.11.0"
   }
 }
