--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mocha": "^3.4.2",
     "supertest": "^3.0.0",
     "webpack": "^3.2.0",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-livereload-plugin": "^0.11.0"
   }
 }
