--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-string-replace": "^0.4.1",
     "react-transition-group": "^2.2.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
